tests/pass/member_parsing.tk
import std/io::println
import core/traits::{@encap}

shape Point(
    x: i32,
    y: i32
)
shape Node(
    val: i32,
    ^?point: Point
)
impl Node@encap {
    fn drop(self#) {
        println("drop Node")
    }
}

fn main() -> i32 {
    // Path 1: Success path
    auto n_ok = Node(val=1, ^point=new Point(x=2, y=3))
    auto v1 = n_ok.??point.x
    println("Success access: {}", v1) // Should print 2
    /* Path 2: Panic path
    // The next line MUST trigger a runtime panic (trap) because next is nullptr
    auto n_null = Node(val=1, ^point=nullptr)
    println("This should panic next...")
    auto v2 = n_null.??point.x
    */
    
    return 0
}
