tests/fail/reproduce_panic.tk

import std/io::println
import std/debug::assert
import core/traits::{@encap}

shape Node(
    val: i32,
    ^?next: Node
)
impl Node@encap {
    fn drop(self#) {
        println("dropping {}", self.val)
    }
}

pub fn main() -> i32 {
    auto ^#head = new Node(val=5, ^?next=new Node(val=4, ^?next=nullptr))
    
    println("head val: {}", head.val)
    assert(head.val == 5, "check 5")

    // The problematic assignment: reassigning head to its own next
    if head.^?next is head.^next {
        // println("reseating head to next (val {})", head.^next.val) // REMOVED DOUBLE MOVE
        // EXPECT: error[E0439]:
        ^#head = head.^next // This should drop 5 and make head point to 4
    }

    println("new head val: {}", head.val)
    assert(head.val == 4, "check 4")
    
    return 0
}
